@@ -624,7 +624,7 @@
 
 <addon id="plugin.video.rodnoe.tv"
        name="Rodnoe.TV"
-       version="1.1.3"
+       version="1.2.0"
        provider-name="Eugene Bond">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
