@@ -43,6 +43,7 @@
 	<string id="30040">programm times before channel name</string>
 	<string id="30041">Favourites only</string>
 	<string id="30042">All TV channels</string>
+	<string id="30043">Auto detect current timezone</string>
 	<string id="31001">General settings</string>
 	<string id="31002">Channels list</string>
 	<string id="34001">Streaming server</string>
